tests/src/frontend/syntax/invalid/unused_local_2.sk
fun foo(): void {
  (1, 2) match {
  | (x, _) -> void
  }
}
